--- a/_config.yml
+++ b/_config.yml
@@ -67,7 +67,8 @@ sass:
 # Use the following plug-ins
 gems:
   - jekyll-sitemap # Create a sitemap using the official Jekyll sitemap gem
-
+  - jemoji
+:
 # Exclude these files from your production _site
 exclude:
     - Gemfile
