--- a/_config.yml
+++ b/_config.yml
@@ -54,6 +54,8 @@ baseurl: ""
 #
 
 markdown: redcarpet
+redcarpet:
+    extensions: ["no_intra_emphasis", "tables", "autolink", "strikethrough", "with_toc_data"]
 highlighter: pygments
 permalink: /:title/
 
