Add bokeh charts

--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Hoan Nguyen
 description: Technology, Data science and Python stuffs
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: http://orig15.deviantart.net/b455/f/2012/092/e/4/data_ninja_by_enviedesigns-d4usap4.png
+avatar: http://www.pentaho.com/sites/default/files/ninja-new.png
 
 #
 # Flags below are optional
